<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="0dp">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                style="@style/action_bar" />
        </android.support.design.widget.AppBarLayout>


        <EditText
            android:id="@+id/et_adt_title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/et_line_bg"
            android:gravity="center_vertical"
            android:hint="@string/title"
            android:padding="@dimen/dp_10"
            android:textSize="@dimen/sp_14"
            android:textColorHint="#19443D"
            android:layout_weight="1"/>


        <EditText
            android:id="@+id/et_adt_content"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@drawable/et_line_bg"
            android:gravity="top|left"
            android:hint="@string/content"
            android:padding="@dimen/dp_10"
            android:textColorHint="#19443D"
            android:textSize="@dimen/sp_14"
            android:layout_weight="1"/>

<TextView

    android:id="@+id/tv_adt_date"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_30"
    android:layout_marginLeft="@dimen/dp_10"
    android:layout_marginRight="@dimen/dp_10"
    android:layout_marginTop="@dimen/dp_10"
    android:background="@drawable/et_line_bg"
    android:gravity="center_vertical"
    android:padding="@dimen/dp_10"
    android:layout_weight="1"
    />



        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_marginTop="@dimen/dp_10"
            android:background="@drawable/et_line_bg"
            android:gravity="center_vertical"
            android:padding="@dimen/dp_10"
            android:layout_weight="1"
            android:onClick="addpicture"/>


        <Button
            android:id="@+id/btn_adt_save"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:background="@mipmap/circle_bg"
            android:layout_marginBottom="@dimen/dp_30"
            android:text="@string/save"
            android:textColor="@android:color/black"
            android:textSize="@dimen/sp_14"
            android:onClick="addmemo"
            />

    </LinearLayout>

</FrameLayout>
